--- a/project/workers/auth/wrangler.toml
+++ b/project/workers/auth/wrangler.toml
@@ -8,7 +8,7 @@ name = "carbon-auth-worker"
 [[d1_databases]]
 binding = "DB"
 database_name = "carbon-projects-db"
-database_id = "your-database-id"
+database_id = "35e8e4ea-9cc6-4fc0-8451-9a75f9ea539d"
 
 [vars]
 JWT_SECRET = "your-jwt-secret-key"
