--- a/project/workers/api/wrangler.toml
+++ b/project/workers/api/wrangler.toml
@@ -8,7 +8,7 @@ name = "carbon-api-worker"
 [[d1_databases]]
 binding = "DB"
 database_name = "carbon-projects-db"
-database_id = "your-database-id"
+database_id = "35e8e4ea-9cc6-4fc0-8451-9a75f9ea539d"
 
 [[r2_buckets]]
 binding = "STORAGE"
